# rocprofiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/Modules/: Dependencies.cmake
doc/: CMakeLists.txt  Doxyfile.in  conf.py  index.md
doc/sphinx/: requirements.in  toc.yml.in
script/: gen_ostream_ops.py
src/api/: CMakeLists.txt
