include(ROCMSphinxDoc)

set(DOXYGEN_IN "${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in")
set(DOXYGEN_OUT "${CMAKE_CURRENT_BINARY_DIR}/Doxyfile")
configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)

file(COPY
  "${CMAKE_CURRENT_SOURCE_DIR}/index.md"
  DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")

# rocm-docs-core will learn to create the folder of the external toc
file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/sphinx")

rocm_add_sphinx_doc(
  "${CMAKE_CURRENT_BINARY_DIR}"
  CONFIG_DIR "${CMAKE_CURRENT_SOURCE_DIR}"
  OUTPUT_DIR "${CMAKE_INSTALL_DOCDIR}"
  BUILDER html
  USES_DOXYGEN
  VARS
    "doxyfile=${DOXYGEN_OUT}"
    "external_toc_template_path=${CMAKE_CURRENT_SOURCE_DIR}/sphinx/toc.yml.in"
    "external_toc_path=${CMAKE_CURRENT_BINARY_DIR}/sphinx/toc.yml"
)
get_filename_component(INSTALL_TO "${CMAKE_INSTALL_DOCDIR}" DIRECTORY)
install(
  DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_INSTALL_DOCDIR}"
  DESTINATION "${INSTALL_TO}")

set(CPACK_PACKAGE_VENDOR "Advanced Micro Devices, Inc")
set(CPACK_PACKAGE_DESCRIPTION "Longwinded description shown in DEB/RPM description.")
set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
set(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.md")
set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})
set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Mate.Nagy-Egri@amd.com")
set(CPACK_DEBIAN_FILE_NAME "${DEBIAN_PACKAGE_NAME}_${CPACK_PACKAGE_VERSION}-doc.deb")
